--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome | GG's for All</title>
+
 </head>
 <body>
-    
+    <div>
+        <label>0656696282</label>
+    </div>
 </body>
 </html>
