--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome | GG's for All</title>
+    <title>Welcome | GGs for All</title>
 
 </head>
 <body>
+    <h1> very big title</h1>
     <div>
-        <label>0656696282</label>
+        <label>hello my</label>
     </div>
 </body>
 </html>
