--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome | GGs for All</title>
-
-</head>
-<body>
-    <h1> very big title</h1>
-    <div>
-        <label>hello my</label>
-    </div>
-</body>
+    <head>
+        <title></title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="./build/tailwind.css" rel="stylesheet">
+    </head >
+    <body class=" bg-blue-900">
+        <p class=" text-blue-100"> Hello world </p>
+    
+    </body>
 </html>
