--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 </head>
 <body>
-    <header class="text-gray-400 bg-gray-900 body-font" style="position: relative;">
+    <nav class="text-gray-400 bg-gray-900 body-font" style="position: fixed;top: 0;overflow: hidden;width: 100%; background-color: ;">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
           <a class="flex title-font font-large items-center text-white mb-4 md:mb-0">
               <img src="assets/logo.png" alt="GG" srcset="" class="w-10 h-10">
@@ -46,7 +46,7 @@
             </svg>
           </button>
         </div>
-      </header>
+    </nav>
       <div id="first" style="height: 30vh;background-color: blueviolet;"></div>
 
       <div style="height: 100vh;"></div>
