Added cover photo

--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,200;0,400;1,700&display=swap" rel="stylesheet">   
-=======
     <link href="./build/tailwind.css" rel="stylesheet">
->>>>>>> 61385e5dd44c02193860d33ab27adb47a5d8357d
     <title>Welcome | GGs for All</title>
     <style>
         @font-face {
@@ -30,7 +27,7 @@
 
 </head>
 <body>
-    <nav class="text-gray-400 bg-gray-900 body-font" style="position: fixed;top: 0;overflow: hidden;width: 100%; background-color: ;">
+    <nav class="text-gray-400 bg-gray-900 bg-opacity-80 body-font" style="position: fixed;top: 0;overflow: hidden;width: 100%;">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
           <a class="flex title-font font-large items-center text-white mb-4 md:mb-0">
               <img src="assets/logo.png" alt="GG" srcset="" class="w-10 h-10">
@@ -50,9 +47,12 @@
           </button>
         </div>
     </nav>
-      <div id="first" style="height: 30vh;background-color: blueviolet;"></div>
+      <div id="first" style="width:100% ;height: 100%; max-height: 70%">
+        <img src="assets/landing.jpg" alt="" srcset="" style="width: 100%; height: auto;">
+    </div>
+    
 
-      <div style="height: 100vh;"></div>
+      <div style="height: 30vh;"></div>
 
       <footer class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
@@ -90,5 +90,4 @@
         </div>
       </footer>
 </body>
->>>>>>> f08ce2bd9ad5e5c3ab55def38abd18a76c3b6ac6
 </html>
