--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         </div>
     </nav>
       <div id="first" style="width:100% ;height: 100%; max-height: 70%">
-        <img src="assets/landing.jpg" alt="" srcset="" style="width: 100%; height: auto;">
+        <img src="assets/img.jpg" alt="" srcset="" style="width: 100%; height: auto;">
     </div>
     
 
-      <div style="height: 30vh;"></div>
+      <div style="height: auto;"></div>
 
       <footer class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
