--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,200;0,400;1,700&display=swap" rel="stylesheet">   
     <link href="./build/tailwind.css" rel="stylesheet">
-    <title>Welcome | GGS4ALL</title>
+    <title>Contact Us | GGS4ALL</title>
+
     <style>
         @font-face {
         font-family: 'aquirebold';
@@ -25,9 +26,10 @@
 
     </style>
 
+    
 </head>
 <body>
-    <nav class="text-gray-400 bg-gray-900 bg-opacity-0 body-font" style="position: fixed;top: 0;overflow: hidden;width: 100%;">
+    <nav class="text-gray-400 bg-gray-900 bg-opacity-100 body-font" style="top: 0;width: 100%;">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
           <a class="flex title-font font-large items-center text-white mb-4 md:mb-0">
               <img src="assets/logo.png" alt="GG" srcset="" class="w-10 h-10">
@@ -35,26 +37,44 @@
             <span class="ml-3 text-xl" id="logo-title">GGS4ALL</span>
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-            <a class="mr-5 hover:text-white font-large">Home</a>
+            <a class="mr-5 hover:text-white font-large" href="index.html">Home</a>
             <a class="mr-5 hover:text-white">Deals</a>
             <a class="mr-5 hover:text-white">Who are we?</a>
             <a class="mr-5 hover:text-white">Our services</a>
           </nav>
-          <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"><a href="contact.html">Contact</a> 
+          <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">Contact
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
           </button>
         </div>
     </nav>
-      <div id="first" style="width:100% ;height: 100%; max-height: 70%">
-        <img src="assets/purpell.jpg" alt="" srcset="" style="width: 100%; height: auto;">
+
+    <div>
+        <section class="text-gray-400 bg-gray-900 body-font relative">
+            <div class="absolute inset-0 bg-gray-900">
+              <iframe title="map" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" scrolling="no" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=university%20euromed%20de%20fes+(My%20Business%20Name)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed" style="filter: grayscale(1) contrast(1.2) opacity(0.16);"></iframe>
+            </div>
+            <div class="container px-5 py-24 mx-auto flex">
+              <div class="lg:w-1/3 md:w-1/2 bg-gray-900 shadow-md rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10">
+                <h2 class="text-white text-lg mb-1 font-medium title-font">Contact Us</h2>
+                <p class="leading-relaxed mb-5">Just drop a line. We will be glad to help!</p>
+                <div class="relative mb-4">
+                  <label for="email" class="leading-7 text-sm text-gray-400">Email</label>
+                  <input type="email" id="email" name="email" class="w-full bg-gray-800 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                </div>
+                <div class="relative mb-4">
+                  <label for="message" class="leading-7 text-sm text-gray-400">Message</label>
+                  <textarea id="message" name="message" class="w-full bg-gray-800 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 h-32 text-base outline-none text-gray-100 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
+                </div>
+                <button class="text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Drop a line</button>
+              </div>
+            </div>
+          </section>
     </div>
-    
 
-      <div style="height: auto;"></div>
 
-      <footer class="text-gray-400 bg-gray-900 body-font">
+    <footer class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
           <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
             <img src="assets/logo.png" alt="GG" srcset="" class="w-10 h-10">
