Added contact info

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <span class="ml-3 text-xl" id="logo-title">GGS4ALL</span>
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-            <a class="mr-5 hover:text-white font-large">Home</a>
+            <a class="mr-5 hover:text-white font-large" href="index.html">Home</a>
             <a class="mr-5 hover:text-white">Deals</a>
             <a class="mr-5 hover:text-white">Who are we?</a>
             <a class="mr-5 hover:text-white">Our services</a>
