--- a/contact.html
+++ b/contact.html
@@ -56,6 +56,18 @@
               <iframe title="map" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" scrolling="no" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=university%20euromed%20de%20fes+(My%20Business%20Name)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed" style="filter: grayscale(1) contrast(1.2) opacity(0.16);"></iframe>
             </div>
             <div class="container px-5 py-24 mx-auto flex">
+                <div class="bg-gray-900 relative flex flex-wrap py-6 rounded shadow-md" style="height: min-content; position: fixed; top: 60%;">
+                    <div class="lg:w-1/2 px-6">
+                      <h2 class="title-font font-semibold text-white tracking-widest text-xs">ADDRESS</h2>
+                      <p class="mt-1">Route Nationale Fès Meknès, Fez - Morocco</p>
+                    </div>
+                    <div class="lg:w-1/2 px-6 mt-4 lg:mt-0">
+                      <h2 class="title-font font-semibold text-white tracking-widest text-xs">EMAIL</h2>
+                      <a class="text-indigo-400 leading-relaxed">ggsforall@eidia.ueuromed.org</a>
+                      <h2 class="title-font font-semibold text-white tracking-widest text-xs mt-4">PHONE</h2>
+                      <p class="leading-relaxed">+212533390281</p>
+                    </div>
+                </div>
               <div class="lg:w-1/3 md:w-1/2 bg-gray-900 shadow-md rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10">
                 <h2 class="text-white text-lg mb-1 font-medium title-font">Contact Us</h2>
                 <p class="leading-relaxed mb-5">Just drop a line. We will be glad to help!</p>
@@ -66,8 +78,7 @@
                 <div class="relative mb-4">
                   <label for="message" class="leading-7 text-sm text-gray-400">Message</label>
                   <textarea id="message" name="message" class="w-full bg-gray-800 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 h-32 text-base outline-none text-gray-100 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
-                </div>
-                <button class="text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Drop a line</button>
+                <button class="text-white bg-indigo-500 border-0 my-2 py-3 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Drop a line</button>
               </div>
             </div>
           </section>
