--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     
 </head>
 <body>
-    <nav class="text-gray-400 bg-gray-900 bg-opacity-100 body-font" style="top: 0;width: 100%;">
+    <nav id="navbar" class="text-gray-400 bg-gray-900 bg-opacity-100 body-font" style="top: 0;width: 100%;">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
           <a class="flex title-font font-large items-center text-white mb-4 md:mb-0">
               <img src="assets/logo.png" alt="GG" srcset="" class="w-10 h-10">
@@ -37,12 +37,12 @@
             <span class="ml-3 text-xl" id="logo-title">GGS4ALL</span>
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-            <a class="mr-5 hover:text-white font-large" href="index.html">Home</a>
-            <a class="mr-5 hover:text-white">Deals</a>
-            <a class="mr-5 hover:text-white">Who are we?</a>
-            <a class="mr-5 hover:text-white">Our services</a>
+            <a class="mr-5 hover:text-white text-lg" href="index.html">Home</a>
+            <a class="mr-5 hover:text-white text-lg">Deals</a>
+            <a class="mr-5 hover:text-white text-lg">Who are we?</a>
+            <a class="mr-5 hover:text-white text-lg">Our services</a>
           </nav>
-          <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">Contact
+          <button class="inline-flex items-center bg-gray-800 text-lg border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">Contact
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
@@ -120,5 +120,7 @@
           </span>
         </div>
       </footer>
+
+      
 </body>
 </html>
