--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,200;0,400;1,700&display=swap" rel="stylesheet">   
     <link href="./build/tailwind.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/74be4f90e6.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <title>Welcome | GGS4ALL</title>
     <style>
         @font-face {
@@ -23,8 +25,6 @@
             font-size: x-large;
         }
         
-
-
     </style>
 
 </head>
@@ -54,12 +54,12 @@
         
 
     </div>
-
+    <!-- hady hya la partie li khdamin 3liha -->
     <section class="text-gray-400 bg-gray-900 py-24 body-font">
         <div class="text-center mb-20">
             <img src="" alt="">
             <h1 class="sm:text-3xl text-2xl font-medium title-font text-white mb-4">Gaming made different</h1>
-            <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto text-gray-400 text-opacity-80">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine, ramps microdosing banh mi pug.</p>
+            <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto text-gray-400 text-opacity-80">Unleash new gaming possibilities that you never anticipated</p>
             <div class="flex mt-6 justify-center">
             <div class="w-16 h-1 rounded-full bg-indigo-500 inline-flex"></div>
             </div>
@@ -105,7 +105,7 @@
           </span>
         </div>
       </footer>
-
+      <!-- hady gheer myk 3liha rah makadir walo -->
       <script>
         $(document).ready(function(){
             $(window).scroll(function(){
