--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
     </section>
 
-    
+    <!-- 7ett hna lkmala mn site dyal tailblocks -->
 
       <div style="height: auto;"></div>
 
