--- a/index.html
+++ b/index.html
@@ -49,10 +49,8 @@
           </button>
         </div>
     </nav>
-      <div id="first" style="width:100% ;height: 100%; max-height: 70%">
-        <img src="assets/purpell.jpg" alt="" srcset="" style="width: 100%; height: auto; visibility: visible;">
-        
-
+      <div id="first" style="width:100% ;height: 90%; max-height: 60%">
+        <img src="assets/testdoc2.jpg" alt="" srcset="" style="background-size: auto 90%; visibility: visible;">
     </div>
     <!-- hady hya la partie li khdamin 3liha -->
     <section class="text-gray-400 bg-gray-900 py-24 body-font">
