Changed the final cover.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,200;0,400;1,700&display=swap" rel="stylesheet">   
     <link href="./build/tailwind.css" rel="stylesheet">
+
     <script src="https://kit.fontawesome.com/74be4f90e6.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -50,7 +51,7 @@
         </div>
     </nav>
       <div id="first" style="width:100% ;height: 90%; max-height: 60%">
-        <img src="assets/testdoc2.jpg" alt="" srcset="" style="background-size: auto 90%; visibility: visible;">
+        <img src="assets/test3.jpg" alt="" srcset="" style="background-size: auto 90%; visibility: visible;">
     </div>
     <!-- hady hya la partie li khdamin 3liha -->
     <section class="text-gray-400 bg-gray-900 py-24 body-font">
