--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <title>Welcome | GGS4ALL</title>
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+    
     <style>
         @font-face {
         font-family: 'aquirebold';
