--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
 </head>
 <body>
     <nav id="navbar" class="text-gray-400 bg-gray-900 bg-opacity-0 body-font" style="position: fixed;top: 0;overflow: hidden;width: 100%;">
-        <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-          <a class="flex title-font font-large items-center text-white mb-4 md:mb-0">
+        <div class="container flex flex-col flex-wrap items-center p-5 mx-auto md:flex-row">
+          <a class="flex items-center mb-4 text-white title-font font-large md:mb-0">
               <img src="assets/logo.png" alt="GG" srcset="" class="w-10 h-10">
             </svg>
             <span class="ml-3 text-3xl" id="logo-title">GGS4ALL</span>
           </a>
-          <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-            <a class="mr-5 hover:text-white text-lg" href="index.html">Home</a>
-            <a class="mr-5 hover:text-white text-lg">Deals</a>
-            <a class="mr-5 hover:text-white text-lg">Who are we?</a>
-            <a class="mr-5 hover:text-white text-lg">Our services</a>
+          <nav class="flex flex-wrap items-center justify-center text-base md:ml-auto">
+            <a class="mr-5 text-lg hover:text-white" href="index.html">Home</a>
+            <a class="mr-5 text-lg hover:text-white">Deals</a>
+            <a class="mr-5 text-lg hover:text-white">Who are we?</a>
+            <a class="mr-5 text-lg hover:text-white">Our services</a>
           </nav>
-          <button class="inline-flex items-center text-lg bg-gray-800 border-0 py-1 px-3 bg-opacity-30 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"><a href="contact.html">Contact</a> 
+          <button class="inline-flex items-center px-3 py-1 mt-4 text-base text-lg bg-gray-800 border-0 rounded bg-opacity-30 focus:outline-none hover:bg-gray-700 md:mt-0"><a href="contact.html">Contact</a> 
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
@@ -55,14 +55,122 @@
       <div id="first" style="width:100% ;height: 90%; max-height: 60%">
         <img src="assets/test3.jpg" alt="" srcset="" style="background-size: auto 90%; visibility: visible;">
     </div>
+
+    <!--blassa dial lo3aab-->
+    <section class="text-gray-400 bg-gray-900 body-font">
+      <div class="container px-5 py-24 mx-auto">
+        <div class="flex flex-wrap -m-4">
+          <div class="w-full p-4 lg:w-1/4 md:w-1/2">
+            <button>
+            <a class="relative block overflow-hidden rounded h-70">
+              <img alt="ecommerce" class="w-full h-full opacity-100 hover:opacity-60 " src="./assets/spmiles.jpg">
+            </a>
+          </button>
+            <div class="mt-4">
+              <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Action/Adventure</h3>
+              <h2 class="text-lg font-medium text-white title-font">spider-man mile morales</h2>
+              <p class="mt-1">$16.00</p>
+            </div>
+          </div>
+          <div class="w-full p-4 lg:w-1/4 md:w-1/2">
+            <button>
+            <a class="relative block overflow-hidden rounded h-70">
+              <img alt="ecommerce" class="w-full h-full opacity-100 hover:opacity-60 " src="./assets/GOD.jpg">
+            </a>
+          </button>
+            <div class="mt-4">
+              <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Action/Adventure</h3>
+              <h2 class="text-lg font-medium text-white title-font">God of war 4</h2>
+              <p class="mt-1">$21.15</p>
+            </div>
+          </div>
+          <div class="w-full p-4 lg:w-1/4 md:w-1/2">
+            <button>
+            <a class="relative block overflow-hidden rounded h-70">
+              <img alt="ecommerce" class="block object-cover object-center w-full h-full opacity-100 hover:opacity-60" src="./assets/The-Last-of-Us.jpg">
+            </a>
+          </button>
+            <div class="mt-4">
+              <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Horror/Action/Adventure</h3>
+              <h2 class="text-lg font-medium text-white title-font">The Last of Us</h2>
+              <p class="mt-1">$12.00</p>
+            </div>
+          </div>
+          <div class="w-full p-4 lg:w-1/4 md:w-1/2">
+            <button>
+            <a class="relative block overflow-hidden rounded h-70">
+              <img alt="ecommerce" class="w-full h-full opacity-100 hover:opacity-60 " src="./assets/Ghost-of-Tsushima.jpg">
+            </a>
+          </button>
+            <div class="mt-4">
+              <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Action/Adventure</h3>
+              <h2 class="text-lg font-medium text-white title-font">Ghost ofTsushima</h2>
+              <p class="mt-1">$18.40</p>
+            </div>
+          </div>
+          <div class="w-full p-4 lg:w-1/4 md:w-1/2">
+            <button>
+            <a class="relative block overflow-hidden rounded h-80">
+              <img alt="ecommerce" class="w-full h-full opacity-100 hover:opacity-60" src="./assets/FIFA__21.jpg">
+            </a>
+          </button>
+            <div class="mt-4">
+              <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Football/Sport</h3>
+              <h2 class="text-lg font-medium text-white title-font">Fifa 21</h2>
+              <p class="mt-1">$16.00</p>
+            </div>
+          </div>
+          <div class="w-full p-4 lg:w-1/4 md:w-1/2">
+            <button>
+            <a class="relative block overflow-hidden rounded h-70">
+              <img alt="ecommerce" class="w-full h-full opacity-100 hover:opacity-60 " src="./assets/NBA.jpg">
+            </a>
+          </button>
+            <div class="mt-4">
+              <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">BasketBall/Sport</h3>
+              <h2 class="text-lg font-medium text-white title-font">NBA 2K21 </h2>
+              <p class="mt-1">$21.15</p>
+            </div>
+          </div>
+          <div class="w-full p-4 lg:w-1/4 md:w-1/2">
+            <button >
+              <a class="relative block overflow-hidden rounded h-70">
+                <img alt="ecommerce" class="w-full h-full opacity-100 hover:opacity-60" width="719" height=900 src="./assets/pes-2021-cover.jpg">
+                
+              </a>
+            </button> 
+            <div class="mt-4">
+              <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Football/Sport</h3>
+              <h2 class="text-lg font-medium text-white title-font">pes 2021</h2>
+              <p class="mt-1">$12.00</p>
+            </div>
+          </div>
+          <div class="w-full p-4 lg:w-1/4 md:w-1/2">
+            <button>
+            <a class="relative block overflow-hidden rounded h-70">
+              <img alt="ecommerce" class="block object-cover object-center w-full h-full opacity-100 hover:opacity-60" src="./assets/needforspeed.jpg">
+            </a>
+          </button>
+            <div class="mt-4">
+              <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Racing/Sports</h3>
+              <h2 class="text-lg font-medium text-white title-font">Need for speed</h2>
+              <p class="mt-1">$18.40</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  <!-- hna katsali blassa dial lo3aab-->
+
+
     <!-- hady hya la partie li khdamin 3liha -->
-    <section class="text-gray-400 bg-gray-900 py-24 body-font">
-        <div class="text-center mb-20">
+    <section class="py-24 text-gray-400 bg-gray-900 body-font">
+        <div class="mb-20 text-center">
             <img src="" alt="">
-            <h1 class="sm:text-3xl text-2xl font-medium title-font text-white mb-4">Gaming made different</h1>
-            <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto text-gray-400 text-opacity-80">Unleash new gaming possibilities that you never anticipated</p>
-            <div class="flex mt-6 justify-center">
-            <div class="w-16 h-1 rounded-full bg-indigo-500 inline-flex"></div>
+            <h1 class="mb-4 text-2xl font-medium text-white sm:text-3xl title-font">Gaming made different</h1>
+            <p class="mx-auto text-base leading-relaxed text-gray-400 xl:w-2/4 lg:w-3/4 text-opacity-80">Unleash new gaming possibilities that you never anticipated</p>
+            <div class="flex justify-center mt-6">
+            <div class="inline-flex w-16 h-1 bg-indigo-500 rounded-full"></div>
             </div>
         </div>
     </section>
@@ -72,15 +180,15 @@
       <div style="height: auto;"></div>
 
       <footer class="text-gray-400 bg-gray-900 body-font">
-        <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
-          <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
+        <div class="container flex flex-col items-center px-5 py-8 mx-auto sm:flex-row">
+          <a class="flex items-center justify-center font-medium text-white title-font md:justify-start">
             <img src="assets/logo.png" alt="GG" srcset="" class="w-10 h-10">
             <span class="ml-3 text-xl">GGS4ALL</span>
           </a>
-          <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2021 EIDIA —
-            <!-- <a href="https://twitter.com/knyttneve" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer">@knyttneve</a> -->
+          <p class="mt-4 text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0">© 2021 EIDIA —
+            <!-- <a href="https://twitter.com/knyttneve" class="ml-1 text-gray-500" target="_blank" rel="noopener noreferrer">@knyttneve</a> -->
           </p>
-          <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
+          <span class="inline-flex justify-center mt-4 sm:ml-auto sm:mt-0 sm:justify-start">
             <a class="text-gray-400">
               <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
                 <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
