Fixed navbar bug.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
 </head>
 <body>
-    <nav id="navbar" class="text-gray-400 bg-gray-900 bg-opacity-0 body-font" style="position: fixed;top: 0;overflow: hidden;width: 100%;">
+
+    <nav id="navbar" class="text-gray-400 bg-gray-900 bg-opacity-60 body-font z-40" style="position: fixed;top: 0;overflow: hidden;width: 100%;">
         <div class="container flex flex-col flex-wrap items-center p-5 mx-auto md:flex-row">
           <a class="flex items-center mb-4 text-white title-font font-large md:mb-0">
               <img src="assets/logo.png" alt="GG" srcset="" class="w-10 h-10">
@@ -58,7 +59,12 @@
 
     <!--blassa dial lo3aab-->
     <section class="text-gray-400 bg-gray-900 body-font">
-      <div class="container px-5 py-24 mx-auto">
+        
+      <div class="container px-5 py-20 mx-auto">
+            <div class="flex-col">
+                <img class="rounded w-10" src="assets/ICONS/discount1.png" alt="" srcset="">
+                <p class="text-4xl" style="padding-bottom: 3rem;">Top Deals:</p>
+            </div>
         <div class="flex flex-wrap -m-4">
           <div class="w-full p-4 lg:w-1/4 md:w-1/2">
             <button>
@@ -68,7 +74,7 @@
           </button>
             <div class="mt-4">
               <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Action/Adventure</h3>
-              <h2 class="text-lg font-medium text-white title-font">spider-man mile morales</h2>
+              <h2 class="text-lg font-medium text-white title-font">Spider-Man Mile Morales</h2>
               <p class="mt-1">$16.00</p>
             </div>
           </div>
@@ -80,7 +86,7 @@
           </button>
             <div class="mt-4">
               <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Action/Adventure</h3>
-              <h2 class="text-lg font-medium text-white title-font">God of war 4</h2>
+              <h2 class="text-lg font-medium text-white title-font">God of War 4</h2>
               <p class="mt-1">$21.15</p>
             </div>
           </div>
@@ -104,7 +110,7 @@
           </button>
             <div class="mt-4">
               <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Action/Adventure</h3>
-              <h2 class="text-lg font-medium text-white title-font">Ghost ofTsushima</h2>
+              <h2 class="text-lg font-medium text-white title-font">Ghost of Tsushima</h2>
               <p class="mt-1">$18.40</p>
             </div>
           </div>
@@ -116,7 +122,7 @@
           </button>
             <div class="mt-4">
               <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Football/Sport</h3>
-              <h2 class="text-lg font-medium text-white title-font">Fifa 21</h2>
+              <h2 class="text-lg font-medium text-white title-font">FIFA 21</h2>
               <p class="mt-1">$16.00</p>
             </div>
           </div>
@@ -141,7 +147,7 @@
             </button> 
             <div class="mt-4">
               <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Football/Sport</h3>
-              <h2 class="text-lg font-medium text-white title-font">pes 2021</h2>
+              <h2 class="text-lg font-medium text-white title-font">Pro Evolution Soccer 2021</h2>
               <p class="mt-1">$12.00</p>
             </div>
           </div>
@@ -153,7 +159,7 @@
           </button>
             <div class="mt-4">
               <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Racing/Sports</h3>
-              <h2 class="text-lg font-medium text-white title-font">Need for speed</h2>
+              <h2 class="text-lg font-medium text-white title-font">Need for speed : HEAT</h2>
               <p class="mt-1">$18.40</p>
             </div>
           </div>
