--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 
-    <nav id="navbar" class="text-gray-400 bg-gray-900 bg-opacity-60 body-font z-40" style="position: fixed;top: 0;overflow: hidden;width: 100%;">
+    <nav id="navbar" class="z-40 text-gray-400 bg-scroll bg-gray-900 bg-opacity-60 hover:opacity-95 hover:bg-black body-font" style="position: fixed;top: 0;overflow: hidden;width: 100%;">
         <div class="container flex flex-col flex-wrap items-center p-5 mx-auto md:flex-row">
           <a class="flex items-center mb-4 text-white title-font font-large md:mb-0">
               <img src="assets/logo.png" alt="GG" srcset="" class="w-10 h-10">
@@ -62,7 +62,7 @@
         
       <div class="container px-5 py-20 mx-auto">
             <div class="flex-col">
-                <img class="rounded w-10" src="assets/ICONS/discount1.png" alt="" srcset="">
+                <img class="w-10 rounded" src="assets/ICONS/discount1.png" alt="" srcset="">
                 <p class="text-4xl" style="padding-bottom: 3rem;">Top Deals:</p>
             </div>
         <div class="flex flex-wrap -m-4">
