SIZE_rwina_fixed

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 
-    <nav id="navbar" class="z-40 text-gray-400 bg-scroll bg-gray-900 bg-opacity-60 hover:opacity-95 hover:bg-black body-font" style="position: fixed;top: 0;overflow: hidden;width: 100%;">
+    <nav id="navbar" class="z-40 text-gray-400 bg-scroll bg-gray-900 bg-opacity-20 hover:opacity-80 hover:bg-black body-font" style="position: fixed;top: 0;overflow: hidden;width: 100%;">
         <div class="container flex flex-col flex-wrap items-center p-5 mx-auto md:flex-row">
           <a class="flex items-center mb-4 text-white title-font font-large md:mb-0">
               <img src="assets/logo.png" alt="GG" srcset="" class="w-10 h-10">
@@ -116,8 +116,8 @@
           </div>
           <div class="w-full p-4 lg:w-1/4 md:w-1/2">
             <button>
-            <a class="relative block overflow-hidden rounded h-80">
-              <img alt="ecommerce" class="w-full h-full opacity-100 hover:opacity-60" src="./assets/FIFA__21.jpg">
+            <a class="relative block overflow-hidden rounded h-90">
+              <img alt="ecommerce" class="w-full h-full opacity-100 hover:opacity-60" src="./assets/FIFA21.jpg">
             </a>
           </button>
             <div class="mt-4">
@@ -129,7 +129,7 @@
           <div class="w-full p-4 lg:w-1/4 md:w-1/2">
             <button>
             <a class="relative block overflow-hidden rounded h-70">
-              <img alt="ecommerce" class="w-full h-full opacity-100 hover:opacity-60 " src="./assets/NBA.jpg">
+              <img alt="ecommerce" class="w-full h-full opacity-100 hover:opacity-60 " src="./assets/NBA2K21.jpg">
             </a>
           </button>
             <div class="mt-4">
@@ -141,7 +141,7 @@
           <div class="w-full p-4 lg:w-1/4 md:w-1/2">
             <button >
               <a class="relative block overflow-hidden rounded h-70">
-                <img alt="ecommerce" class="w-full h-full opacity-100 hover:opacity-60" width="719" height=900 src="./assets/pes-2021-cover.jpg">
+                <img alt="ecommerce" class="w-full h-full opacity-100 hover:opacity-60" width="719" height=900 src="./assets/PES2021.jpg">
                 
               </a>
             </button> 
