--- a/index.html
+++ b/index.html
@@ -57,6 +57,25 @@
         <img src="assets/test3.jpg" alt="" srcset="" style="background-size: auto 90%; visibility: visible;">
     </div>
 
+    <!-- blassa dyal l offre -->
+    <section class="text-gray-400 bg-gray-900 body-font">
+        <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
+          <div class="py-4" alt="hero">
+            <iframe width="1031" height="580" src="https://www.youtube.com/embed/6bfC-vvlbHc?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+          <div class="text-center lg:w-2/3 w-full">
+            <div class="flex justify-center py-2">
+                <img class="w-48 py-2 px-3" src="assets/forza300px.png">
+            </div>
+            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white"> UPCOMING: Forza Horizon ™ 5</h1>
+            <p class="leading-relaxed mb-8">Witness the power of Xbox Series X through Forza Motorsport. Automotive entertainment is reimagined for a new generation.</p>
+            <div class="flex justify-center">
+              <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Learn More</button>
+              <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Release Date</button>
+            </div>
+          </div>
+        </div>
+      </section>
     <!--blassa dial lo3aab-->
     <section class="text-gray-400 bg-gray-900 body-font">
         
@@ -116,8 +135,8 @@
           </div>
           <div class="w-full p-4 lg:w-1/4 md:w-1/2">
             <button>
-            <a class="relative block overflow-hidden rounded h-80">
-              <img alt="ecommerce" class="w-full h-full opacity-100 hover:opacity-60" src="./assets/FIFA__21.jpg">
+            <a class="relative block overflow-hidden rounded h-80" >
+              <img alt="ecommerce" class="w-full h-full opacity-100 hover:opacity-60" src="./assets/fifa21.jpeg" >
             </a>
           </button>
             <div class="mt-4">
@@ -126,10 +145,10 @@
               <p class="mt-1">$16.00</p>
             </div>
           </div>
-          <div class="w-full p-4 lg:w-1/4 md:w-1/2">
+          <div class="w-full p-4 lg:w-1/4 md:w-1/2" >
             <button>
             <a class="relative block overflow-hidden rounded h-70">
-              <img alt="ecommerce" class="w-full h-full opacity-100 hover:opacity-60 " src="./assets/NBA.jpg">
+              <img alt="ecommerce" class="w-full h-full opacity-100 hover:opacity-60"  src="./assets/NBA.jpeg">
             </a>
           </button>
             <div class="mt-4">
@@ -138,10 +157,10 @@
               <p class="mt-1">$21.15</p>
             </div>
           </div>
-          <div class="w-full p-4 lg:w-1/4 md:w-1/2">
+          <div class="w-full p-4 lg:w-1/4 md:w-1/2" >
             <button >
               <a class="relative block overflow-hidden rounded h-70">
-                <img alt="ecommerce" class="w-full h-full opacity-100 hover:opacity-60" width="719" height=900 src="./assets/pes-2021-cover.jpg">
+                <img alt="ecommerce" class="w-full h-full opacity-100 hover:opacity-60" width="719" height=900 src="./assets/pes21.webp">
                 
               </a>
             </button> 
@@ -151,7 +170,7 @@
               <p class="mt-1">$12.00</p>
             </div>
           </div>
-          <div class="w-full p-4 lg:w-1/4 md:w-1/2">
+          <div class="w-full p-4 lg:w-1/4 md:w-1/2" >
             <button>
             <a class="relative block overflow-hidden rounded h-70">
               <img alt="ecommerce" class="block object-cover object-center w-full h-full opacity-100 hover:opacity-60" src="./assets/needforspeed.jpg">
