--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <!-- blassa dyal l offre -->
     <section class="text-gray-400 bg-gray-900 body-font">
-        <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
+        <div class="container mx-auto flex px-5 items-center justify-center flex-col" style="padding-top: 6rem; padding-bottom: 2rem;">
           <div class="py-4" alt="hero">
             <iframe width="1031" height="580" src="https://www.youtube.com/embed/6bfC-vvlbHc?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
@@ -93,8 +93,8 @@
           </button>
             <div class="mt-4">
               <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Action/Adventure</h3>
-              <h2 class="text-lg font-medium text-white title-font">Spider-Man Mile Morales</h2>
-              <p class="mt-1">$16.00</p>
+              <h2 class="text-lg font-medium text-white title-font"><a href="">Spider-Man Mile Morales</a></h2>
+              <p class="mt-1">$12.99   <strike>$16.00</strike></p>
             </div>
           </div>
           <div class="w-full p-4 lg:w-1/4 md:w-1/2">
@@ -105,7 +105,7 @@
           </button>
             <div class="mt-4">
               <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Action/Adventure</h3>
-              <h2 class="text-lg font-medium text-white title-font">God of War 4</h2>
+              <h2 class="text-lg font-medium text-white title-font"><a href="">God of War 4</a></h2>
               <p class="mt-1">$21.15</p>
             </div>
           </div>
@@ -117,7 +117,7 @@
           </button>
             <div class="mt-4">
               <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Horror/Action/Adventure</h3>
-              <h2 class="text-lg font-medium text-white title-font">The Last of Us</h2>
+              <h2 class="text-lg font-medium text-white title-font"><a href="">The Last of Us</a></h2>
               <p class="mt-1">$12.00</p>
             </div>
           </div>
@@ -129,7 +129,7 @@
           </button>
             <div class="mt-4">
               <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Action/Adventure</h3>
-              <h2 class="text-lg font-medium text-white title-font">Ghost of Tsushima</h2>
+              <h2 class="text-lg font-medium text-white title-font"><a href="">Ghost of Tsushima</a></h2>
               <p class="mt-1">$18.40</p>
             </div>
           </div>
@@ -145,7 +145,7 @@
           </button>
             <div class="mt-4">
               <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Football/Sport</h3>
-              <h2 class="text-lg font-medium text-white title-font">FIFA 21</h2>
+              <h2 class="text-lg font-medium text-white title-font"><a href="">FIFA 21</a></h2>
               <p class="mt-1">$16.00</p>
             </div>
           </div>
@@ -160,7 +160,7 @@
           </button>
             <div class="mt-4">
               <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">BasketBall/Sport</h3>
-              <h2 class="text-lg font-medium text-white title-font">NBA 2K21 </h2>
+              <h2 class="text-lg font-medium text-white title-font"><a href="">NBA 2K21</a> </h2>
               <p class="mt-1">$21.15</p>
             </div>
           </div>
@@ -172,7 +172,7 @@
             </button> 
             <div class="mt-4">
               <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Football/Sport</h3>
-              <h2 class="text-lg font-medium text-white title-font">Pro Evolution Soccer 2021</h2>
+              <h2 class="text-lg font-medium text-white title-font"><a href="">Pro Evolution Soccer 2021</a></h2>
               <p class="mt-1">$12.00</p>
             </div>
           </div>
@@ -184,7 +184,7 @@
           </button>
             <div class="mt-4">
               <h3 class="mb-1 text-xs tracking-widest text-gray-500 title-font">Racing/Sports</h3>
-              <h2 class="text-lg font-medium text-white title-font">Need for speed : HEAT</h2>
+              <h2 class="text-lg font-medium text-white title-font"><a href="">Need for speed : HEAT</a></h2>
               <p class="mt-1">$18.40</p>
             </div>
           </div>
