Fixed a bug in YouTube player.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section class="text-gray-400 bg-gray-900 body-font">
         <div class="container mx-auto flex px-5 items-center justify-center flex-col" style="padding-top: 6rem; padding-bottom: 2rem;">
           <div class="py-4" alt="hero">
-            <iframe width="1031" height="580" src="https://www.youtube.com/embed/6bfC-vvlbHc?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="1031" height="580" src="https://www.youtube.com/embed/6bfC-vvlbHc?autoplay=1&mute=1&controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; modestbranding" allowfullscreen></iframe>
         </div>
           <div class="text-center lg:w-2/3 w-full">
             <div class="flex justify-center py-2">
