--- a/index.html
+++ b/index.html
@@ -58,23 +58,27 @@
     </div>
 
     <!-- blassa dyal l offre -->
-    <section class="text-gray-400 bg-gray-900 body-font">
-        <div class="container mx-auto flex px-5 items-center justify-center flex-col" style="padding-top: 6rem; padding-bottom: 2rem;">
-          <div class="py-4" alt="hero">
+    <section  class="py-20 text-gray-400 bg-fixed body-font " style="background-image: url(./assets/frza.jpg);">
+      <id id="first" style="width:100% ;height: 90%; max-height: 60%">
+       
+   
+        <div class="container flex flex-col items-center justify-center px-5 mx-auto" style="padding-top: 6rem; padding-bottom: 2rem;">
+          <div class="py-20" alt="hero">
             <iframe width="1031" height="580" src="https://www.youtube.com/embed/6bfC-vvlbHc?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-          <div class="text-center lg:w-2/3 w-full">
+          <div class="w-full text-center px-9 py-9 lg:w-2/3">
             <div class="flex justify-center py-2">
-                <img class="w-48 py-2 px-3" src="assets/forza300px.png">
+                <img class="w-48 px-3 py-2" src="assets/forza300px.png">
             </div>
-            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white"> UPCOMING: Forza Horizon ™ 5</h1>
-            <p class="leading-relaxed mb-8">Witness the power of Xbox Series X through Forza Motorsport. Automotive entertainment is reimagined for a new generation.</p>
+            <h1 class="mb-4 text-3xl font-medium text-white title-font sm:text-4xl"> UPCOMING: Forza Horizon ™ 5</h1>
+            <p class="mb-8 leading-relaxed">Witness the power of Xbox Series X through Forza Motorsport. Automotive entertainment is reimagined for a new generation.</p>
             <div class="flex justify-center">
-              <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Learn More</button>
-              <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Release Date</button>
+              <button class="inline-flex px-6 py-2 text-lg text-white bg-indigo-500 border-0 rounded focus:outline-none hover:bg-indigo-600">Learn More</button>
+              <button class="inline-flex px-6 py-2 ml-4 text-lg text-gray-400 bg-gray-800 border-0 rounded focus:outline-none hover:bg-gray-700 hover:text-white">Release Date</button>
             </div>
           </div>
         </div>
+      </id>
       </section>
     <!--blassa dial lo3aab-->
     <section class="text-gray-400 bg-gray-900 body-font">
