--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <section  class="text-gray-400 bg-fixed py-36 body-font " style=" background-image: url(./assets/frza.jpg);">
         <div class="container flex flex-col items-center justify-center px-5 mx-auto" style="padding-top: 6rem; padding-bottom: 2rem;">
           <div class="py-4" alt="hero">
-            <iframe width="1031" height="580" src="https://www.youtube.com/embed/6bfC-vvlbHc?autoplay=1&mute=1&control=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; modestbranding" allowfullscreen></iframe>
+            <iframe width="1031" height="580" src="https://www.youtube.com/embed/6bfC-vvlbHc?autoplay=1&mute=1&controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; modestbranding" allowfullscreen></iframe>
 
         </div>
           <div class="w-full text-center px-9 py-9 lg:w-2/3">
