--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </nav>
       <div id="first" style="width:100% ;height: 90%; max-height: 60%">
-        <img src="assets/test3.jpg" alt="" srcset="" style="background-size: auto 90%; visibility: visible;">
+        <img src="assets/herocover.png" alt="" srcset="" style="background-size: auto 90%; visibility: visible;">
     </div>
 
     <!-- blassa dyal l offre -->
@@ -63,7 +63,7 @@
 <section  class="text-gray-400 bg-fixed py-36 body-font " style=" background-image: url(./assets/frza.jpg);">
         <div class="container flex flex-col items-center justify-center px-5 mx-auto" style="padding-top: 6rem; padding-bottom: 2rem;">
           <div class="py-4" alt="hero">
-            <iframe width="1031" height="580" src="https://www.youtube.com/embed/6bfC-vvlbHc?autoplay=1&mute=1&controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; modestbranding" allowfullscreen></iframe>
+            <iframe width="1031" height="580" src="https://www.youtube.com/embed/6bfC-vvlbHc?autoplay=1&mute=1&controls=0&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; modestbranding" allowfullscreen></iframe>
 
         </div>
           <div class="w-full text-center px-9 py-9 lg:w-2/3">
@@ -73,7 +73,7 @@
             <h1 class="mb-4 text-3xl font-medium text-white title-font sm:text-4xl"> UPCOMING: Forza Horizon ™ 5</h1>
             <p class="mb-8 leading-relaxed text-gray-300">Witness the power of Xbox Series X through Forza Motorsport. Automotive entertainment is reimagined for a new generation.</p>
             <div class="flex justify-center">
-              <button class="inline-flex px-6 py-2 text-lg text-white bg-indigo-500 border-0 rounded focus:outline-none hover:bg-indigo-600">Learn More</button>
+              <button class="inline-flex px-6 py-2 text-lg text-white bg-gradient-to-r from-pink-600 to-indigo-600 border-0 rounded focus:outline-none hover:bg-indigo-600">Learn More</button>
               <button class="inline-flex px-6 py-2 ml-4 text-lg text-gray-400 bg-gray-800 border-0 rounded focus:outline-none hover:bg-gray-700 hover:text-white">Release Date</button>
             </div>
           </div>
