--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,11 @@
     <nav id="navbar" class="text-gray-400 bg-gray-900 bg-opacity-100 body-font" style="top: 0;width: 100%;">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
           <a class="flex title-font font-large items-center text-white mb-4 md:mb-0">
+            <a href="index.html" class="flex">
               <img src="assets/logo.png" alt="GG" srcset="" class="w-10 h-10">
-            </svg>
+              <span class="ml-3 text-3xl" id="logo-title">GGS4ALL</span>
+            </a>
+          
             <span class="ml-3 text-xl" id="logo-title">GGS4ALL</span>
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
