Added svg logo.

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div class="container flex flex-col flex-wrap items-center p-5 mx-auto md:flex-row">
           <a class="flex items-center mb-4 text-white title-font font-large md:mb-0">
               <a href="index.html" class="flex">
-                <img src="assets/logo.png" alt="GG" srcset="" class="w-10 h-10">
-                <span class="ml-3 text-3xl" id="logo-title">GGS4ALL</span>
+                <img src="assets/logo.svg" alt="GG" srcset="" class="w-10 h-10">
+                <span class="ml-1 text-3xl" id="logo-title">GGS4ALL</span>
               </a>
           </a>
           <nav class="flex flex-wrap items-center justify-center text-base md:ml-auto">
@@ -592,7 +592,7 @@ round: 1 // Will round the animated value to 1 decimal
       <footer class="text-gray-400 bg-black body-font">
         <div class="container flex flex-col items-center px-5 py-8 mx-auto sm:flex-row">
           <a class="flex items-center justify-center font-medium text-white title-font md:justify-start">
-            <img src="assets/logo.png" alt="GG" srcset="" class="w-10 h-10">
+            <img src="assets/logo.svg" alt="GG" srcset="" class="w-10 h-10">
             <span class="ml-3 text-xl">GGS4ALL</span>
           </a>
           <p class="mt-4 text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0">© 2021 EIDIA —
