--- a/index.html
+++ b/index.html
@@ -490,8 +490,8 @@
     <section class="py-24 text-gray-400 bg-black body-font">
         <div class="mb-20 text-center">
             <img src="" alt="">
-            <h1 class="mb-4 text-2xl font-medium text-white sm:text-3xl title-font">Gaming made different</h1>
-            <p class="mx-auto text-base leading-relaxed text-gray-400 xl:w-2/4 lg:w-3/4 text-opacity-80">Unleash new gaming possibilities that you never anticipated</p>
+            <h1 class="mb-4 text-2xl font-medium text-white sm:text-3xl title-font">GGS4ALL in Numbers</h1>
+            <p class="mx-auto text-base leading-relaxed text-gray-400 xl:w-2/4 lg:w-3/4 text-opacity-80">We pushed boundaries we couldn't imagine</p>
             <div class="flex justify-center mt-6">
             <div class="inline-flex w-16 h-1 bg-indigo-500 rounded-full"></div>
             </div>
