Added companies we worked with section.

--- a/index.html
+++ b/index.html
@@ -495,12 +495,6 @@
             </div>
         </div> 
 
-
-
-
-
-
-
       <!-- hadi animation  -->
       <div class="flex justify-between pr-6 pl-6 m-20">
      
@@ -645,10 +639,26 @@ round: 1 // Will round the animated value to 1 decimal
 </script>
     </section>
 
-    <!-- 7ett hna lkmala mn site dyal tailblocks -->
+    <!-- Companies we worked with -->
+
+    <section class="py-24 text-gray-400 bg-black body-font">
+      <div class="text-center">
+          <img src="" alt="">
+          <h1 class="mb-4 text-2xl font-medium text-white sm:text-3xl title-font">Companies we worked with</h1>
+          <p class="mx-auto text-base leading-relaxed text-gray-400 xl:w-2/4 lg:w-3/4 text-opacity-80">More than 15 local and international companies.</p>
+          <div class="flex justify-center mt-6">
+          <div class="inline-flex w-16 h-1 bg-indigo-500 rounded-full"></div>
+          </div>
+      </div> 
+
+      <div class="flex justify-center">
+        <img src="assets/hero/companies-banner.png" style="width: 70%;height: auto;" alt="">
+      </div>
+   
+    </section>
 
       <div style="height: auto;"></div>
-
+    <!-- Footer -->
       <footer class="text-gray-400 bg-black body-font">
         <div class="container flex flex-col items-center px-5 py-8 mx-auto sm:flex-row">
           <a class="flex items-center justify-center font-medium text-white title-font md:justify-start">
